// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`When using snapshots Should render with an element children 1`] = `
<span
  className="sc-bdVaJa lbJuWU"
>
  <button
    className="btn shape-round btn-default btn-md sc-bZQynM hMdykY"
    disabled={false}
    type="button"
  >
    <div />
  </button>
</span>
`;

exports[`When using snapshots on an anchor typed Button Should render with an element children 1`] = `
<span
  className="sc-bdVaJa lbJuWU"
>
  <a
    className="btn shape-round btn-default btn-md sc-gzVnrw iTLIgl"
    disabled={false}
    role="button"
  >
    <div />
  </a>
</span>
`;
